test/error/restrict_define.colgm
func main() {
    var a = 1;
    var b = a = 2;
    //  ^^ error: cannot define <restrict> type
    //     assignment statement will return <restrict> type
}