test/error/restrict_define.result
Error: cannot use value of assignment statement as the initial value
  --> test/error/restrict_define.colgm:3:13
  | 
3 |     var b = a = 2;
  |             ^^^^^

Warning: unused variable "b"
  --> test/error/restrict_define.colgm:3:5
  | 
3 |     var b = a = 2;
  |     ^^^^^^^^^^^^^